--- a/project.yml
+++ b/project.yml
@@ -33,6 +33,8 @@ targets:
       - package: MarkdownUI
       - package: TOMLDecoder
     settings:
+      debug:
+        SWIFT_ACTIVE_COMPILATION_CONDITIONS: DEBUG
       base:
         INFOPLIST_KEY_LSUIElement: true
         PRODUCT_BUNDLE_IDENTIFIER: com.moltbot.MoltNotch
